test: tests for jit operators